...
        label.font = .verdanaBold(size: 30)
        label.textColor = .textAccent
        label.textAlignment = .left
        return label
    }()

    private lazy var exitButton: UIButton = {
        let button = UIButton()
        button.contentMode = .center
        button.accessibilityIdentifier = "exitButton"
        button.setImage(AssetImage.Icons.closeIcon.image.withRenderingMode(.alwaysOriginal), for: .normal)
        button.addTarget(self, action: #selector(didTapExitButton), for: .touchUpInside)
        return button
...
    }

    // MARK: - Private Methods

    private func configureUI() {
        view.backgroundColor = .systemBackground
        view.accessibilityIdentifier = "LoyalityProgrammView"
        view.addSubviews(titleLabel, bonucesImageView, starImageView, bonucesAmountLabel, exitButton)
    }

    private func configureLayout() {
        UIView.doNotTAMIC(for: titleLabel, bonucesImageView, starImageView, bonucesAmountLabel, exitButton)
        configureExitButtonLayout()
...
