...
    // MARK: - Visual Components

    private let termsView = TermsView()
    private var visualBackgroundView = UIVisualEffectView()
    private lazy var handleAreaView = {
        let view = UIView()
        view.accessibilityIdentifier = "HandleArea"
        let tapGesture = UITapGestureRecognizer(target: self, action: #selector(handleCardTap(_:)))
        view.addGestureRecognizer(tapGesture)
        let panGesture = UIPanGestureRecognizer(target: self, action: #selector(handleCardPan(_:)))
        view.addGestureRecognizer(panGesture)
        return view
    }()
...
