...

/// Вью для отображения информации что информация в категории не загрузилась
final class CategoryPlaceholderView: UIView {
    // MARK: - Constants

    private enum Constants {
        static let nothingFoundLabelText = "Nothing found"
        static let anotherRequestLabelText = "Try entering your query differently"
    }

    // MARK: - Visual Components

    private let mainImageView = {
...
